sync STR_Tree